--- a/src/main/resources/static/html/doctorlist.html
+++ b/src/main/resources/static/html/doctorlist.html
@@ -83,7 +83,7 @@
 			.rowjustify {
 				align-items: center;
 				justify-content: flex-start;
-				space;
+				/*space;*/
 			}
 			
 			.firstrow {
@@ -146,7 +146,7 @@
 
 	</body>
 	<script>
-		var URL = "http://www.jiayibilin.com/api-wechat";
+		var URL = "http://mrxiej.ngrok.wendal.cn/api-wechat";
 		$.ajax({
 			type: "GET",
 			url: URL + "/doctor/getlist",
