--- a/src/main/resources/static/html/personSave.html
+++ b/src/main/resources/static/html/personSave.html
@@ -54,7 +54,7 @@
                         <label class="weui-label">身份证</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input input-right" id="identify" type="text" placeholder="请填写" onblur="validate(this.id);"/>
+                        <input class="weui-input input-right" id="identify" type="text" placeholder="请填写" onkeyup="getAge(this.value);" onblur="validate(this.id);"/>
                     </div>
                 </div>
                 <a class="weui-cell weui-cell_access" href="javascript:;">
@@ -70,7 +70,7 @@
                         <label class="weui-label">年龄</label>
                     </div>
                     <div class="weui-cell__bd">
-                        <input class="weui-input input-right" id="age" type="text" placeholder="请填写" onblur="validate(this.id);"/>
+                        <input class="weui-input input-right" id="age" type="text" placeholder="请填写"  onblur="validate(this.id);"/>
                     </div>
                 </div>
                 <div class="weui-cell">
@@ -88,6 +88,7 @@
                     <div class="weui-cell__ft">
                         <input class="weui-input input-right" id="address" type="text" value="">
                     </div>
+                    <div id="map"></div>
                 </a>
                 <div class="weui-cell">
                     <div class="weui-cell__hd">
@@ -109,6 +110,8 @@
 <!-- <script type="text/javascript" src="../script/plugins/weui/weui.min.js"></script> -->
 <script type="text/javascript" src="../js/plugins/jquery-weui/jquery-weui.min.js"></script>
 <script type="text/javascript" src="../js/plugins/picker/city-picker.js"></script>
+<script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=mBRSdlhvYSINw1YYm5kXnuEFKNEsWO4x"></script>
+
 <script>
 
     $(function() {
@@ -156,6 +159,79 @@
         }
     }
 </script>
+
+<script>
+    //验证身份证号码正确性
+    // 函数参数必须是字符串，因为二代身份证号码是十八位，而在javascript中，十八位的数值会超出计算范围，造成不精确的结果，导致最后两位和计算的值不一致，从而该函数出现错误。
+    // 详情查看javascript的数值范围
+    function checkIDCard(idcode){
+        // 加权因子
+        var weight_factor = [7,9,10,5,8,4,2,1,6,3,7,9,10,5,8,4,2];
+        // 校验码
+        var check_code = ['1', '0', 'X' , '9', '8', '7', '6', '5', '4', '3', '2'];
+
+        var code = idcode + "";
+        var last = idcode[17];//最后一个
+
+        var seventeen = code.substring(0,17);
+
+        // ISO 7064:1983.MOD 11-2
+        // 判断最后一位校验码是否正确
+        var arr = seventeen.split("");
+        var len = arr.length;
+        var num = 0;
+        for(var i = 0; i < len; i++){
+            num = num + arr[i] * weight_factor[i];
+        }
+
+        // 获取余数
+        var resisue = num%11;
+        var last_no = check_code[resisue];
+
+        // 格式的正则
+        // 正则思路
+        /*
+        第一位不可能是0
+        第二位到第六位可以是0-9
+        第七位到第十位是年份，所以七八位为19或者20
+        十一位和十二位是月份，这两位是01-12之间的数值
+        十三位和十四位是日期，是从01-31之间的数值
+        十五，十六，十七都是数字0-9
+        十八位可能是数字0-9，也可能是X
+        */
+        var idcard_patter = /^[1-9][0-9]{5}([1][9][0-9]{2}|[2][0][0|1][0-9])([0][1-9]|[1][0|1|2])([0][1-9]|[1|2][0-9]|[3][0|1])[0-9]{3}([0-9]|[X])$/;
+
+        // 判断格式是否正确
+        var format = idcard_patter.test(idcode);
+
+        // 返回验证结果，校验码和格式同时正确才算是合法的身份证号码
+        return last === last_no && format ? true : false;
+    }
+    //根据身份证号码获取年龄
+    function getAge(identityCard) {
+        var len = (identityCard + "").length;
+        if (checkIDCard(identityCard) == false){
+            $.toptip('请输入正确的身份证号码', 'warning');
+            return 0;
+        }
+        var strBirthday = "";
+        if (len == 18)//处理18位的身份证号码从号码中得到生日和性别代码
+        {
+            strBirthday = identityCard.substr(6, 4) + "/" + identityCard.substr(10, 2) + "/" + identityCard.substr(12, 2);
+        }
+        //时间字符串里，必须是“/”
+        var birthDate = new Date(strBirthday);
+        var nowDateTime = new Date();
+        var age = nowDateTime.getFullYear() - birthDate.getFullYear();
+        //再考虑月、天的因素;.getMonth()获取的是从0开始的，这里进行比较，不需要加1
+        if (nowDateTime.getMonth() < birthDate.getMonth() || (nowDateTime.getMonth() == birthDate.getMonth() && nowDateTime.getDate() < birthDate.getDate())) {
+            age--;
+        }
+//        return age;
+        $('#age').val(age);
+    }
+</script>
+
 <script type="text/javascript" src="../js/tools.js"></script>
 <script type="text/javascript" src="../js/pages/personSave.js"></script>
 </html>
