--- a/src/main/resources/static/html/doctorqrcode.html
+++ b/src/main/resources/static/html/doctorqrcode.html
@@ -1,85 +1,196 @@
-<!DOCTYPE html>
+<!doctype html>
 <html >
 
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,width=device-width,initial-scale=1.0" />
-		<meta name="format-detection" content="telephone=no,email=no,date=no,address=no" />
-		<link rel="stylesheet" type="text/css" href="../css/doctorinfo.css" />
-		<link rel="stylesheet" type="text/css" href="../css/flex.css" />
-		<script src="../js/plugins/jquery/jquery-3.2.1.min.js"></script>
-		<script src="../js/pages/doctorinfo.js"></script>
-		<title>佳医比邻</title>
-	</head>
+<head>
+	<meta charset="utf-8" />
+	<meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,initial-scale=1.0,width=device-width" />
+	<title>佳医比邻</title>
+	<!-- <link rel="stylesheet" type="text/css" href="../css/api.css" /> -->
+	<!-- WEIXIN UI CSS -->
+	<link rel="stylesheet" type="text/css" href="../css/weui.css" />
+	<link rel="stylesheet" type="text/css" href="../css/jquery-weui.css" />
+	<!-- CUSTOM DEFINE CSS -->
+	<link rel="stylesheet" type="text/css" href="../css/doctor-near.css" />
+	<link rel="stylesheet" type="text/css" href="../css/doctorinfo.css" />
+	<link rel="stylesheet" type="text/css" href="../css/flex.css" />
+	<style type="text/css">
+		.service-t {
+			font-weight: normal !important;
+		}
 
-	<body onload="start();">
-		<div class="main">
-			<div class="top">
-				<div class="top_name flex-r flex-justify-between">
-					<div class="top_img">
-						<img src="../image/Shape-10.png" onclick="javascript:window.history.back(-1);"/>
-					</div>
-					<div class="top_doctor flex-justify-center">
-						<p id="topname">未显示</p>
-					</div>
-					<div class="top_right">
-					</div>
-				</div>
-				<div class="top_content">
-					<div class="top_share  flex-r flex-justify-end">
-						<div class="share  flex-r flex-justify-start">
-							<img src="../image/Share@2x.png" />
-							<div>分享</div>
-						</div>
-					</div>
-					<div class="top_info  flex-c  flex-align-center">
-						<div class="div_img flex-c flex-align-center flex-justify-center">
-							<img src="../image/touxiang1@2x.png" />
-						</div>
-						<div class="info flex-c flex-align-center">
+		.single-arrow-down.unfold {
+			transform: rotate(-180deg);
+		}
 
-							<div class="first flex-r flex-align-bottom">
-								<p id="midname" class="name">未显示</p>
-								<p class="department">未显示 | 未显示</p>
-							</div>
-							<p class="address">未显示</p>
-						</div>
-					</div>
-				</div>
+		.information{
+			font-size: 14px;
+		}
+
+		.introduce{
+			font-size: 14px;
+			color: #4e4d4d;
+		}
+		.title-right{
+			width:90px;
+		}
+		.title-left{
+			width:80%;
+		}
+		.title-left .title-ellipsis {
+			margin-right: 30px;
+		}
+		.cs-circle-check label {
+			height: auto;
+		}
+		.cs-circle-check label, .cs-square-check label {
+			white-space:normal;
+		}
+	</style>
+</head>
+
+<body>
+
+<div class="page">
+	<header>
+		<div class="header">
+			<div class="top-left">
+				<img src="../image/return1.png" alt="" />
 			</div>
-			<div class="kongge">
-
-			</div>
-			<div class="mid_intro">
-				<div class="div_intro">
-					<p>医生简介</p>
-				</div>
-				<div class="intro">
-					<div class="intro_content">
-						<div class="flex-r flex-align-bottom">
-							<img src="../image/shancang@2x.png" /><b>擅长</b>
-						</div>
-						<p id="adept">未显示</p>
-					</div>
-					<div class="intro_content">
-						<div class="flex-r flex-align-bottom">
-							<img src=" ../image/doctors-case@2x.png" /><b>职业经验：</b>
-						</div>
-						<p id="experience">未显示</p>
-					</div>
-				</div>
-			</div>
-
-			<div class="qrcode">
-				<div class="div_qrcode">
-					<img src="../image/qrcode.png"/>
-				</div>
-				<div class="remind">
-					关注医生请扫码
-				</div>
-			</div>
-
+			<p class="title">医生主页</p>
 		</div>
-	</body>
+	</header>
+
+	<section class="content-container">
+		<div class="swiper-container">
+			<div class="swiper-wrapper">
+				<div class="swiper-slide">
+					<img class="img" src="../image/homepage.png"></img>
+				</div>
+			</div>
+			<div class="portait-img flex-c flex-align-center flex-justify-center">
+				<img id="portait" src="../image/touxiang-2x.png">
+				<p>
+					<span class="" id="personName">未显示</span>
+					<span class="information" id="personDepartment">未显示</span>
+					&nbsp;|&nbsp;
+					<span class="information" id="personPost">未显示</span>
+				</p>
+				<p class="information" id="personHospital">未显示</p>
+			</div>
+		</div>
+		<div class="weui-panel">
+			<div class="weui-panel__hd headline">医生简介</div>
+			<div class="weui-panel__bd">
+				<div class="weui-media-box weui-media-box_text">
+					<p class="product-title">
+						<img src="../image/speciality.png" alt="" />
+						<span>擅长</span>
+					</p>
+					<p class="introduce" id="personAdept">未显示
+					</p>
+				</div>
+				<div class="weui-media-box weui-media-box_text">
+					<p class="product-title">
+						<img src="../image/experience.png" alt="" />
+						<span>职业经验</span>
+					</p>
+					<p class="introduce" id="personExperience">未显示
+					</p>
+				</div>
+			</div>
+		</div>
+
+		<div class="qrcode">
+			<div class="div_qrcode">
+				<img src="../image/qrcode.png" id="personQrcode"/>
+			</div>
+			<div class="remind">
+				关注医生请扫码
+			</div>
+		</div>
+
+	</section>
+
+</div>
+</body>
+
+<script type="text/javascript" src="../js/plugins/fastclick/fastclick.js"></script>
+<script type="text/javascript" src="../js/plugins/jquery/jquery-2.1.4.js"></script>
+<script type="text/javascript" src="../js/plugins/jquery-weui/jquery-weui.min.js"></script>
+<script type="text/javascript" src="../js/tools.js"></script>
+<script type="text/javascript" src="../js/pages/doctorqrcode.js"></script>
+
+
+<!--<script type="text/javascript">-->
+    <!--$(function() {-->
+        <!--FastClick.attach(document.body);-->
+    <!--});-->
+
+
+    <!--function getUrlParam(name) {-->
+        <!--var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)");-->
+        <!--var r = window.location.search.substr(1).match(reg);-->
+        <!--if(r != null) {-->
+            <!--return unescape(r[2]);-->
+        <!--}-->
+        <!--return null;-->
+    <!--}-->
+    <!--var phone = getUrlParam('phone');-->
+    <!--var wechat_id = getUrlParam('wechat_id');-->
+
+
+    <!--// 获取医生信息-->
+    <!--function getDoctorInfo() {-->
+        <!--$.ajax({-->
+            <!--url: 'http://mrxiej.ngrok.wendal.cn/api-wechat/doctor/get',-->
+            <!--type: 'GET',-->
+            <!--timeout: 5000,-->
+            <!--data: {-->
+                <!--phone: phone-->
+            <!--},-->
+            <!--beforeSend: function() {-->
+                <!--$.showLoading();-->
+            <!--},-->
+            <!--success: function(result, status, xhr) {-->
+                <!--if (result.errorcode != '0') {-->
+                    <!--$.alert({-->
+                        <!--title: '提示',-->
+                        <!--text: '加载失败，请过一段时间再尝试，给您带来的不遍我们深感抱歉.',-->
+                        <!--onOK: function () {-->
+                            <!--javascript:WeixinJSBridge.call('closeWindow');-->
+                        <!--}-->
+                    <!--});-->
+                <!--} else {-->
+                    <!--$.alert('想拥有您自己的私人医生需要购买医生提供的服务','提示');-->
+                    <!--var data = result.data;-->
+                    <!--console.log(data);-->
+                    <!--if (data) {-->
+                        <!--if(data.head_pic!=null){-->
+                            <!--$('#portait').attr('src', data.head_pic);-->
+                        <!--}-->
+                        <!--$('#personName').html(data.name);-->
+                        <!--$('#personDepartment').html(data.department);-->
+                        <!--$('#personPost').html(data.title);-->
+                        <!--$('#personHospital').html(data.hospital);-->
+                        <!--$('#personAdept').html(data.adept);-->
+                        <!--$('#personExperience').html(data.experience);-->
+                        <!--$('#personQrcode').attr('src', data.QRcode_pic);-->
+                    <!--}-->
+                <!--}-->
+            <!--},-->
+            <!--error: function(xhr, status, error) {-->
+                <!--$.alert('网络不通畅');-->
+                <!--javascript:WeixinJSBridge.call('closeWindow');-->
+            <!--},-->
+            <!--complete: function(xhr, status) {-->
+                <!--$.hideLoading();-->
+            <!--}-->
+        <!--});-->
+    <!--}-->
+
+<!--</script>-->
+
+<!--<script type="text/javascript" src="../js/tools.js"></script>-->
+<!--<script type="text/javascript" src="../js/pages/doctorinfo.js"></script>-->
 
 </html>
