--- a/src/main/resources/static/html/healthDoc.html
+++ b/src/main/resources/static/html/healthDoc.html
@@ -47,7 +47,7 @@
             </div>
             <div class="weui-panel weui-panel_access">
                 <div class="weui-panel__bd">
-                    <a href="biochemicalExam.html" class="weui-media-box weui-media-box_appmsg">
+                    <a href="biochemicalinfo.html" class="weui-media-box weui-media-box_appmsg">
                         <div class="weui-media-box__hd">
                             <img class="weui-media-box__thumb" src="../image/biochemical_exam.png" alt="" />
                         </div>
@@ -77,7 +77,7 @@
             </div>
             <div class="weui-panel weui-panel_access">
                 <div class="weui-panel__bd">
-                    <a href="cardiograph.html" class="weui-media-box weui-media-box_appmsg">
+                    <a href="cardiographinfo.html" class="weui-media-box weui-media-box_appmsg">
                         <div class="weui-media-box__hd">
                             <img class="weui-media-box__thumb" src="../image/cardiograph.png" alt="" />
                         </div>
@@ -95,9 +95,9 @@
                   风险评估
                 </a>
             </p>
-            <p class="text-center">
-                <span class="evaluate-hint">注意：所有信息提交完成才可进行风险评估</span>
-            </p>
+            <!--<p class="text-center">-->
+                <!--<span class="evaluate-hint">注意：所有信息提交完成才可进行风险评估</span>-->
+            <!--</p>-->
         </section>
     </div>
 </body>
