--- a/src/main/resources/static/html/healthService.html
+++ b/src/main/resources/static/html/healthService.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="maximum-scale=1.0,minimum-scale=1.0,user-scalable=0,initial-scale=1.0,width=device-width" />
-    <title>健康服务</title>
+    <title>佳医比邻</title>
     <!-- <link rel="stylesheet" type="text/css" href="../css/api.css" /> -->
     <!-- WEIXIN UI CSS -->
     <link rel="stylesheet" type="text/css" href="../css/weui.css" />
@@ -35,13 +35,13 @@
             <div class="swiper-container">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img class="img" src="../image/swiper-1.jpg"></img>
+                        <img class="img" src="../image/lunbo1.png"></img>
                     </div>
                     <div class="swiper-slide">
-                        <img class="img" src="../image/swiper-2.jpg"></img>
+                        <img class="img" src="../image/lunbo2.png"></img>
                     </div>
                     <div class="swiper-slide">
-                        <img class="img" src="../image/swiper-3.jpg"></img>
+                        <img class="img" src="../image/lunbo3.png"></img>
                     </div>
                 </div>
                 <div class="swiper-pagination"></div>
