--- a/src/main/resources/static/html/myDoctor.html
+++ b/src/main/resources/static/html/myDoctor.html
@@ -78,7 +78,7 @@
                         <span>分享</span>
                     </a>
                     <a id="a_2evaluate" href="" class="">
-                        <img src="../image/share.png" alt="" />
+                        <img src="../image/doctor_evaluate.png" alt="" />
                         <span>评价</span>
                     </a>
                 </div>
