--- a/src/main/resources/static/html/personSave.html
+++ b/src/main/resources/static/html/personSave.html
@@ -130,7 +130,7 @@
             case "identify": {
                 if (checkIDCard($('#identify').val()) == false) {
                     setTimeout(function () {
-                        $.alert('请填写正确且合适的身份证信息（18位）', function () {
+                        $.alert('请填写正确且合适的身份证信息', function () {
                             $('#identify').focus();
                         });
                     }, 0);
@@ -163,7 +163,6 @@
 <script>
     //验证身份证号码正确性
     // 函数参数必须是字符串，因为二代身份证号码是十八位，而在javascript中，十八位的数值会超出计算范围，造成不精确的结果，导致最后两位和计算的值不一致，从而该函数出现错误。
-    // 详情查看javascript的数值范围
     function checkIDCard(idcode){
         // 加权因子
         var weight_factor = [7,9,10,5,8,4,2,1,6,3,7,9,10,5,8,4,2];
