--- a/src/main/resources/static/html/contact_us.html
+++ b/src/main/resources/static/html/contact_us.html
@@ -29,7 +29,7 @@
             }
             .main{
                 height: 600px;
-                background-image: url("../../image/tbeijingu-@3x.png");
+                background-image: url("../image/tbeijingu-@3x.png");
                 background-repeat: no-repeat;
                 background-size: 100% auto;
                 background-position: top;
