--- a/src/main/resources/static/html/healthDoc.html
+++ b/src/main/resources/static/html/healthDoc.html
@@ -77,7 +77,7 @@
             </div>
             <div class="weui-panel weui-panel_access">
                 <div class="weui-panel__bd">
-                    <a href="cardiographinfo.html" class="weui-media-box weui-media-box_appmsg">
+                    <a href="cardiogram_frame.html" class="weui-media-box weui-media-box_appmsg">
                         <div class="weui-media-box__hd">
                             <img class="weui-media-box__thumb" src="../image/cardiograph.png" alt="" />
                         </div>
