--- a/src/main/resources/static/html/healthInfo.html
+++ b/src/main/resources/static/html/healthInfo.html
@@ -55,10 +55,13 @@
             </div>
             <div class="weui-cell">
                 <div class="weui-cell__hd">
-                    <label class="weui-label">BMI</label>
+                    <label class="weui-label">BMI </label>
                 </div>
                 <div class="weui-cell__bd">
                     <input class="weui-input input-right" id="bmi" type="text" disabled="true"/>
+                </div>
+                <div class="weui-cell__ft" style="color: #0d0d0d">
+                   kg/m<sup>2</sup>
                 </div>
                 <div class="weui-cell__ft">
                     <span id="value"></span>
