--- a/src/main/resources/static/html/healthService.html
+++ b/src/main/resources/static/html/healthService.html
@@ -77,6 +77,7 @@
                         <p class="title">心血管风险评估</p>
                     </a>
                     <a class="box-one flex-c flex-justify-center flex-align-center" href="notification.html">
+                    <!--<a class="box-one flex-c flex-justify-center flex-align-center" href="">-->
                         <div class="func-icon">
                             <img class="" src="../image/notification.png"></img>
                             <div class="number-red-dot unvisible">4</div>
