--- a/src/main/resources/static/html/personSave.html
+++ b/src/main/resources/static/html/personSave.html
@@ -128,9 +128,15 @@
     function validate(id) {
         switch (id) {
             case "identify": {
-                if (checkIDCard($('#identify').val()) == false) {
+                if (checkIDCard($('#identify').val()) == 2) {
                     setTimeout(function () {
                         $.alert('请填写正确且合适的身份证信息', function () {
+                            $('#identify').focus();
+                        });
+                    }, 0);
+                }else if (checkIDCard($('#identify').val()) == 1) {
+                    setTimeout(function () {
+                        $.alert('请输入大写X', function () {
                             $('#identify').focus();
                         });
                     }, 0);
@@ -196,21 +202,31 @@
         十一位和十二位是月份，这两位是01-12之间的数值
         十三位和十四位是日期，是从01-31之间的数值
         十五，十六，十七都是数字0-9
-        十八位可能是数字0-9，也可能是X
+        十八位可能是数字0-9，也可能是X/x
         */
         var idcard_patter = /^[1-9][0-9]{5}([1][9][0-9]{2}|[2][0][0|1][0-9])([0][1-9]|[1][0|1|2])([0][1-9]|[1|2][0-9]|[3][0|1])[0-9]{3}([0-9]|[X])$/;
 
         // 判断格式是否正确
         var format = idcard_patter.test(idcode);
 
+        if(last == 'x' && last_no == 'X'){
+            return 1;
+        }
         // 返回验证结果，校验码和格式同时正确才算是合法的身份证号码
-        return last === last_no && format ? true : false;
+        if(last === last_no && format){
+            return 0;
+        }else{
+            return 2;
+        }
     }
     //根据身份证号码获取年龄
     function getAge(identityCard) {
         var len = (identityCard + "").length;
-        if (checkIDCard(identityCard) == false){
+        if (checkIDCard(identityCard) == 2){
             $.toptip('请输入正确的身份证号码', 'warning');
+            return 0;
+        }else if (checkIDCard(identityCard) == 1){
+            $.toptip('请输入大写X', 'warning');
             return 0;
         }
         var strBirthday = "";
