第一版第三次修改

--- a/src/main/resources/static/html/msgBoardReply.html
+++ b/src/main/resources/static/html/msgBoardReply.html
@@ -83,8 +83,10 @@
 <script type="text/javascript" src="../js/tools.js"></script>
 <script type="text/javascript" src="../js/pages/msgBoardReply.js"></script>
 <script type="text/javascript" src="../js/plugins/jquery-weui/jquery-weui.min.js"></script>
-<script src="http://gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script>
-<script src="//cdn.bootcss.com/jquery-weui/1.0.1/js/swiper.min.js"></script>
+<script type="text/javascript" src="../js/plugins/swiper/swiper.min.js"></script>
+<script type="text/javascript" src="../js/plugins/oss/aliyun-oss-sdk-4.4.4.min.js"></script>
+<!--<script src="http://gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script>-->
+<!--<script src="//cdn.bootcss.com/jquery-weui/1.0.1/js/swiper.min.js"></script>-->
 <script type="text/javascript">
 
 
