--- a/src/main/resources/static/html/aaa.html
+++ b/src/main/resources/static/html/aaa.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>用来计算身份证最后一位测试用的</title>
 </head>
 <body>
 <div>
