--- a/src/main/resources/static/html/cardiograph.html
+++ b/src/main/resources/static/html/cardiograph.html
@@ -83,8 +83,11 @@
 <script type="text/javascript" src="../js/plugins/fastclick/fastclick.js"></script>
 <script type="text/javascript" src="../js/plugins/jquery/jquery-2.1.4.js"></script>
 <script type="text/javascript" src="../js/plugins/jquery-weui/jquery-weui.min.js"></script>
-<script src="//cdn.bootcss.com/jquery-weui/1.0.1/js/swiper.min.js"></script>
-<script src="http://gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script>
+<script type="text/javascript" src="../js/plugins/swiper/swiper.min.js"></script>
+<script type="text/javascript" src="../js/plugins/oss/aliyun-oss-sdk-4.4.4.min.js"></script>
+
+<!--<script src="//cdn.bootcss.com/jquery-weui/1.0.1/js/swiper.min.js"></script>-->
+<!--<script src="http://gosspublic.alicdn.com/aliyun-oss-sdk-4.4.4.min.js"></script>-->
 <script>
     $(function() {
         FastClick.attach(document.body);
