--- a/src/main/resources/static/html/personSave.html
+++ b/src/main/resources/static/html/personSave.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="weui-cell">
                     <div class="weui-cell__hd">
-                        <label class="weui-label">联系电话</label>
+                        <label class="weui-label">手机号码</label>
                     </div>
                     <div class="weui-cell__bd">
                         <input class="weui-input input-right" id="telephone" type="text" placeholder="请填写" onblur="validate(this.id);"/>
@@ -154,9 +154,9 @@
             }
                 break;
             case "telephone": {
-                if (isNaN($('#telephone').val()) || $('#telephone').val().length > 11) {
+                if (isNaN($('#telephone').val()) || $('#telephone').val().length != 11 || !(/^1\d{10}$/.test($('#telephone').val()))) {
                     setTimeout(function () {
-                        $.alert("请填写合适且正确的联系方式信息（数字）", function () {
+                        $.alert("请填写合适且正确的手机号码", function () {
                         $('#telephone').focus();
                     }); }, 0);
                 }
