第一版第四次修改

--- a/src/main/resources/static/html/myDoctor.html
+++ b/src/main/resources/static/html/myDoctor.html
@@ -137,8 +137,8 @@
         FastClick.attach(document.body);
     });
     //跳转到服务详情
-    function toServiceDetial(id) {
-        window.location.href = "product_detail.html?" + "pur_service_id=" + id;
+    function toServiceDetail(id) {
+        window.location.href = "product_detail.html?" + "service_id=" + id;
     }
 
 </script>
