--- a/src/main/resources/static/html/orderService.html
+++ b/src/main/resources/static/html/orderService.html
@@ -89,7 +89,7 @@
 <script type="text/javascript" src="../js/pages/orderService.js"></script>
 <script>
     //跳转到服务详情
-    function toServiceDetial(id) {
+    function toServiceDetail(id) {
          window.location.href = "product_detail.html?" + "pur_service_id=" + id;
     }
 </script>
