--- a/src/main/resources/static/html/heartRateRecord.html
+++ b/src/main/resources/static/html/heartRateRecord.html
@@ -89,8 +89,8 @@
                     <a class="box-one flex-c flex-justify-center flex-align-center" href="javascript:void(0);">
                         <p class="">血压平均值(mmHg)</p>
                         <p class="record-grid-data">
-                            <span class="text-red" id="avgBP"></span> &nbsp;/&nbsp;
-                            <span class="text-blue" id="maxBP"></span>
+                            <span class="text-blue" id="avgBP"></span> &nbsp;/&nbsp;
+                            <span class="text-red" id="maxBP"></span>
                         </p>
                     </a>
                     <div class="driver-c"></div>
